# CanonicalGS

./: .gitignore  README.md  canonical_ffgs_pipeline_summary.txt  order_invariant_depth_estimation_summary.txt  pyproject.toml
config/: main.yaml
config/dataset/: re10k.yaml
config/model/: minimal.yaml
eng-kitty/: Running-statement.md  work-log.md
scientist/: 2026-03-17_canonicalgs_scientist_brief.md
scripts/: analyze_worldspace_uncertainty.py  compare_mono_voxel_lite_reference.py  evaluate_mono_voxel_lite_canonical_contract.py  plot_voxel_count_histogram.py  plot_voxel_count_histograms_range.py  project_uncertainty_frame139_gaussian_means.py  project_uncertainty_frame139_subset_disagreement.py  remote_smoke_test_100scenes.sh  remote_train_example.sh  render_mono_voxel_lite_custom_novel.py  render_mono_voxel_lite_fixed_context.py  render_mono_voxel_lite_scene.py  trace_canonicalgs_dataset.py  trace_mono_voxel_lite_dataset.py  visualize_confidence_consistent.py  visualize_confidence_from_gaussian_means.py  visualize_confidence_merged.py  visualize_confidence_multicontext.py  visualize_ctx_uncertainty_matplotlib.py
src/canonicalgs/: __init__.py  config.py  main.py
src/canonicalgs/logging/: __init__.py  wandb.py
src/canonicalgs/model/: __init__.py  dpt_head.py  evidence.py  evidence_writer.py  gaussian_readout.py  (+5 more)
tests/: test_canonical_state.py  test_episode_builder.py  test_eval_visualization.py  test_model_pipeline.py  test_mono_voxel_lite_equivalence.py  test_objectives.py  test_re10k_preprocessing.py  test_re10k_split_contract.py  test_render_metrics.py
(+28 files in other folders)
