[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canonicalgs"
version = "0.1.0"
description = "Canonical evidence-state Gaussian splatting research codebase."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3,<2.0",
  "omegaconf>=2.3,<3.0",
  "pytorch-lightning>=2.4,<3.0",
  "PyYAML>=6.0",
  "torch>=2.4",
  "torchvision>=0.19",
  "wandb>=0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
